apps/gotify/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: default
  labels:
    app: gotify
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
      - name: gotify
        image: ghcr.io/gotify/server:latest
        volumeMounts:
        - mountPath: /app/data
          name: data
        ports:
        - containerPort: 80
          name: http
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gotify-pvc
