apps/gotify/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  selector:
    app: gotify
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
