apps/gotify/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gotify.azollerstuff.xyz`)
    kind: Rule
    middlewares:
      - name: headers
    services:
    - name: gotify
      port: 80
  tls:
    certResolver: letsencrypt
    domains:
    - main: azollerstuff.xyz
      sans:
      - '*.azollerstuff.xyz'
